--- a/RangeFinder.Tests/RangeFinder.Tests.csproj
+++ b/RangeFinder.Tests/RangeFinder.Tests.csproj
@@ -25,6 +25,7 @@
     <ItemGroup>
       <ProjectReference Include="../RangeFinder.Generator/RangeFinder.Generator.csproj" />
       <ProjectReference Include="..\RangeFinder.Core\RangeFinder.Core.csproj" />
+      <ProjectReference Include="..\RangeFinder.IO\RangeFinder.IO.csproj" />
     </ItemGroup>
 
 </Project>
