--- a/.github/workflows/auto-format.yml
+++ b/.github/workflows/auto-format.yml
@@ -40,11 +40,8 @@ jobs:
       - name: Apply .NET formatting
         run: dotnet format --verbosity diagnostic
 
-      - name: Apply EditorConfig rules
-        uses: zbeekman/EditorConfig-Action@v1.1.1
-        with:
-          config_file: .editorconfig
-          check_only: false
+      - name: Ensure final newlines
+        run: find . -name "*.cs" -o -name "*.md" -o -name "*.json" -o -name "*.yml" -o -name "*.yaml" | xargs -I {} sh -c 'if [ "$(tail -c1 "{}" 2>/dev/null)" != "" ]; then echo >> "{}"; fi'
 
       - name: Apply markdown formatting
         run: |
