Exclude workflow files from eclint formatting
Prevent permission issues by excluding .github/workflows/ from eclint processing.

--- a/.github/workflows/auto-format.yml
+++ b/.github/workflows/auto-format.yml
@@ -41,7 +41,7 @@ jobs:
         run: npm install -g eclint
 
       - name: Apply EditorConfig rules
-        run: eclint fix .
+        run: eclint fix . --exclude ".github/workflows/**"
 
       - name: Apply markdown formatting
         run: |
