--- a/RangeFinder.IO/RangeFinder.IO.csproj
+++ b/RangeFinder.IO/RangeFinder.IO.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    
+
     <!-- Package Information -->
     <PackageId>RangeFinder.IO</PackageId>
     <Version>0.3.0-preview</Version>
@@ -19,7 +19,7 @@
     <PackageReadmeFile>NUGET_README.md</PackageReadmeFile>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <None Include="NUGET_README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
